# django-js-choices

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: code.yaml  deploy.yaml  linters.yaml
django_js_choices/: __init__.py  core.py  js_choices_settings.py  views.py
django_js_choices/management/commands/: collectstatic_js_choices.py
django_js_choices/templates/django_js_choices/: choices_js.tpl
django_js_choices/templatetags/: js_choices.py
djsc_sandbox/: settings.py  urls.py
djsc_sandbox/basic/: choices.py  models.py
djsc_sandbox/basic/locale/es/LC_MESSAGES/: django.po
djsc_sandbox/basic/migrations/: 0001_initial.py
djsc_sandbox/myapp/: choices.py  models.py
djsc_sandbox/myapp/locale/es/LC_MESSAGES/: django.po
djsc_sandbox/myapp/migrations/: 0001_initial.py  0002_modeld_modela_year_in_school_2_modelb_media_2_and_more.py
djsc_sandbox/myapp/templates/: inline_choices.html
djsc_sandbox/tests/: test_command.py  test_core.py  test_views.py
sandbox/: settings.py  urls.py
sandbox/myapp/: choices.py  models.py  views.py
sandbox/myapp/locale/es/LC_MESSAGES/: django.mo  django.po
sandbox/tests/: test_core.py
