[tool.poetry]
name = "django-js-choices"
version = "0.5.0"
description = "Javascript model field choices handling for Django."
license = "MIT"
authors = ["Lorenzo Peña <lorinkoz@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/lorinkoz/django-js-choices"
keywords = ["django", "choices", "javascript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
]

[tool.poetry.dependencies]
python = "^3.8.1"
django = ">=4.0,<=4.3"
rjsmin = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = {extras = ["toml"], version = "^6.3"}
django-multiselectfield = "^0.1.12"
dukpy = "^0.3.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-comprehensions = "^3.12.0"
flake8-no-types = "^1.5.1"
flake8-tidy-imports = "^4.8.0"
isort = "^5.12.0"
dj-inmemorystorage = "^2.1.0"

[tool.black]
line-length = 120

[tool.isort]
atomic = true
combine_as_imports = true
line_length = 120
profile = "black"

[tool.coverage.run]
source = ["django_js_choices"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
